Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignTextObject.quorum
class Main
    action Main
        Object v
        text t = "text"
        v = cast(Object, t)
        Test(v)
    end

    action Test(text var)
        if var = "text"
            output "passed"
        end
    end
end
