Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberText.quorum
class Main
    action Main
        text v = "text"
        Test(v)
    end

    action Test(number var)
    end
end
